_archive/bazarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:subtitles-outline
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Subtitle Management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-subtitles-outline
    gethomepage.dev/name: bazarr
    gethomepage.dev/widget.type: bazarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_BAZARR_KEY}"
    gethomepage.dev/widget.url: http://bazarr.media.svc.cluster.local:6767
    gethomepage.dev/siteMonitor: https://bazarr.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: "bazarr.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - "bazarr.${SECRET_DOMAIN}"
